fix the hint string wrapping
previously it couldnt wrap because there were no spaces - add spaces and
make it look nicer when it wraps

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -234,10 +234,11 @@ h3 {
 }
 
 .hint-string {
-  letter-spacing: 5px;
+  letter-spacing: 3px;
   font-size: 28px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  line-height: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   text-align: center;
 }
 
